--- a/website/index.html
+++ b/website/index.html
@@ -35,7 +35,7 @@
             <h1 class="logo pull-left">
                 <a class="scrollto" href="#promo">
                     <img id="logo-image" class="logo-image" src="assets/images/logo/logo.png" alt="Logo">
-                    <span class="logo-title">Delta</span>
+                    <span class="logo-title">Learn R</span>
                 </a>
             </h1><!--//logo-->
             <nav id="main-nav" class="main-nav navbar-right" role="navigation">
@@ -50,11 +50,11 @@
                 <div class="navbar-collapse collapse" id="navbar-collapse">
                     <ul class="nav navbar-nav">
                         <li class="active nav-item sr-only"><a class="scrollto" href="#promo">Home</a></li>
-                        <li class="nav-item"><a class="scrollto" href="#features">Features</a></li>
-                        <li class="nav-item"><a class="scrollto" href="#how">How it works</a></li>
+                        <li class="nav-item"><a class="scrollto" href="#features">Course Material</a></li>
+                        <li class="nav-item"><a class="scrollto" href="#how">Sample</a></li>
                         <li class="nav-item"><a class="scrollto" href="#faq">FAQ</a></li>
-                        <li class="nav-item"><a class="scrollto" href="#story">Story</a></li>
-                        <li class="nav-item"><a class="scrollto" href="#pricing">Pricing</a></li>
+                        <li class="nav-item"><a class="scrollto" href="#about">About Us</a></li>
+                        <li class="nav-item"><a class="scrollto" href="#pricing">Registration</a></li>
                         <li class="nav-item last"><a class="scrollto" href="#contact">Contact</a></li>
                     </ul><!--//nav-->
                 </div><!--//navabr-collapse-->
@@ -180,12 +180,8 @@
                 <h2 class="title text-center">Frequently Asked Questions</h2>
                 <div class="faq-col col-md-6 col-sm-6 col-xs-12">
                     <div class="item">
-                        <h3 class="question"><i class="fa fa-question-circle"></i>How can I  ipsum dolor sit amet?</h3>
+                        <h3 class="question"><i class="fa fa-question-circle"></i>How much prior R experience should I have?</h3>
                         <p class="answer">Proin scelerisque magna ac eros aliquam aliquam id in lacus. Morbi quam tortor, consequat at orci non, vulputate volutpat libero. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean sagittis laoreet urna eu ornare. Aenean tempor, leo vel eleifend porttitor, nibh libero ultricies est, sit amet ultricies magna enim et turpis. Donec aliquam velit eu sollicitudin cursus.</p>
-                    </div><!--//item-->
-                    <div class="item">
-                        <h3 class="question"><i class="fa fa-question-circle"></i>What is the ipsum dolor sit amet quam tortor?</h3>
-                        <p class="answer">Proin scelerisque magna ac eros aliquam aliquam id in lacus. Morbi quam tortor, consequat at orci non, vulputate volutpat libero. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean sagittis laoreet urna eu ornare.</p>
                     </div><!--//item-->
                     <div class="item">
                         <h3 class="question"><i class="fa fa-question-circle"></i>What's the differences between ipsum and dolor sit amet?</h3>
@@ -197,12 +193,9 @@
                         <h3 class="question"><i class="fa fa-question-circle"></i>How does the morbi quam tortor work?</h3>
                         <p class="answer">Proin scelerisque magna ac eros aliquam aliquam id in lacus. Morbi quam tortor, consequat at orci non, vulputate volutpat libero. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean sagittis laoreet urna eu ornare.Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean sagittis laoreet urna eu ornare. Aenean tempor, leo vel eleifend porttitor, nibh libero ultricies est, sit amet ultricies magna enim et turpis. Donec aliquam velit eu sollicitudin cursus.</p>
                     </div><!--//item-->
+
                     <div class="item">
-                        <h3 class="question"><i class="fa fa-question-circle"></i>Can I ipsum dolor sit amet nascetur ridiculus?</h3>
-                        <p class="answer">Proin scelerisque magna ac eros aliquam aliquam id in lacus. Morbi quam tortor, consequat at orci non, vulputate volutpat libero. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean sagittis laoreet urna eu ornare.</p>
-                    </div><!--//item-->
-                    <div class="item">
-                        <h3 class="question"><i class="fa fa-question-circle"></i>How can I proin scelerisque magna?</h3>
+                        <h3 class="question"><i class="fa fa-question-circle"></i>What can I do to prepare?</h3>
                         <p class="answer">Aenean tempor, leo vel eleifend porttitor, nibh libero ultricies est, sit amet ultricies magna enim et turpis. Donec aliquam velit eu sollicitudin cursus.Proin scelerisque magna ac eros aliquam aliquam id in lacus. Morbi quam tortor, consequat at orci non, vulputate volutpat libero. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean sagittis laoreet urna eu ornare. </p>
                     </div><!--//item-->
                 </div><!--//faq-col-->
@@ -215,7 +208,7 @@
     </section><!--//faq-->
 
     <!-- ******STORY****** -->
-    <section id="story" class="story section has-pattern">
+    <section id="about" class="story section has-pattern">
         <div class="container">
             <div class="row">
                 <div class="content col-md-6 col-sm-6 col-xs-12 text-center">
@@ -350,22 +343,17 @@
     <!-- ******Pricing****** -->
     <section id="pricing" class="pricing section has-pattern">
         <div class="container">
-             <div class="price-cols row">
-                <h2 class="title text-center">Choose your plan today</h2>
                 <div class="items-wrapper col-md-10 col-sm-12 col-xs-12 col-md-offset-1 col-sm-offset-0 col-xs-offset-0">
                     <div class="item price-1 col-md-4 col-sm-4 col-xs-12 text-center">
                         <div class="item-inner">
                             <div class="heading">
-                            <h3 class="title">Personal</h3>
-                                <p class="price-figure"><span class="price-figure-inner"><span class="currency">$</span><span class="number">5</span><br /><span class="unit"> per month</span></span></p>
+                            <h3 class="title">Academic/Regulatory</h3>
+                                <p class="price-figure"><span class="price-figure-inner"><span class="currency">$</span><span class="number">749</span><br /><span class="unit">per person</span></p>
                             </div>
                             <div class="content">
                                 <ul class="list-unstyled feature-list">
-                                    <li><i class="fa fa-check"></i>1 user</li>
-                                    <li><i class="fa fa-check"></i>10 GB storage</li>
-                                    <li class="disabled"><i class="fa fa-times"></i>Email priority support</li>
-                                    <li class="disabled"><i class="fa fa-times"></i>Free update</li>
-                                    <li class="disabled"><i class="fa fa-times"></i>24/7 support</li>
+                                    <li><i class="fa fa-check"></i>All course code</li>
+                                    <li><i class="fa fa-check"></i>Supplementary R-Foundations material</li>
                                 </ul>
                                 <a class="btn btn-theme btn-block" href="#">Sign Up</a>
 
@@ -376,16 +364,15 @@
                     <div class="item price-2 col-md-4 col-sm-4 col-xs-12 text-center best-buy">
                         <div class="item-inner">
                             <div class="heading">
-                            <h3 class="title">Professional</h3>
-                                <p class="price-figure"><span class="price-figure-inner"><span class="currency">$</span><span class="number">10</span><br /><span class="unit">per month</span></span></p>
+                            <h3 class="title">Academic/Regulatory PLUS</h3>
+                                <p class="price-figure"><span class="price-figure-inner"><span class="currency">$</span><span class="number">999</span><br /><span class="unit">per person</span></span></p>
                             </div>
                             <div class="content">
                                 <ul class="list-unstyled feature-list">
-                                    <li><i class="fa fa-check"></i>10 users</li>
-                                    <li><i class="fa fa-check"></i>30 GB storage</li>
-                                    <li><i class="fa fa-check"></i>Email priority support</li>
-                                    <li><i class="fa fa-check"></i>Free update</li>
-                                    <li class="disabled"><i class="fa fa-times"></i>24/7 support</li>
+                                    <li><i class="fa fa-check"></i>All Course Material</li>
+                                    <li><i class="fa fa-check"></i>Supplementary R-Foundations material</li>
+                                    <li><i class="fa fa-check"></i>$200 credit towards any future R-course or webinar</li>
+                                    <li><i class="fa fa-check"></i>3 hours skype/webex/etc for R project discussion </li>
 
                                 </ul>
                                 <a class="btn btn-theme btn-block" href="#">Sign Up</a>
@@ -395,20 +382,16 @@
                             </div><!--//ribbon-->
                         </div><!--//item-inner-->
                     </div><!--//item-->
-
-                    <div class="item price-3 col-md-4 col-sm-4 col-xs-12 text-center">
+                    <div class="item price-1 col-md-4 col-sm-4 col-xs-12 text-center">
                         <div class="item-inner">
                             <div class="heading">
-                                <h3 class="title">Business</h3>
-                                <p class="price-figure"><span class="price-figure-inner"><span class="currency">$</span><span class="number">25</span><br /><span class="unit">per month</span></span></p>
+                            <h3 class="title">Multi-person Discount</h3>
+                                <p class="price-figure"><span class="price-figure-inner"><span class="number">20% off</span><br /><span class="unit">per person</span></p>
                             </div>
                             <div class="content">
                                 <ul class="list-unstyled feature-list">
-                                    <li><i class="fa fa-check"></i>Unlimited user</li>
-                                    <li><i class="fa fa-check"></i>100 GB storage</li>
-                                    <li><i class="fa fa-check"></i>Email priority support</li>
-                                    <li><i class="fa fa-check"></i>Free update</li>
-                                    <li><i class="fa fa-check"></i>24/7 support</li>
+                                  <li><i class="fa fa-check"></i>Everything from chosen package</li>
+                                  <li><i class="fa fa-check"></i>Great discount</li>
                                 </ul>
                                 <a class="btn btn-theme btn-block" href="#">Sign Up</a>
 
