--- a/website/index.html
+++ b/website/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="assets/plugins/flexslider/flexslider.css">
     <link rel="stylesheet" href="assets/plugins/animate-css/animate.min.css">
     <!-- Theme CSS -->
-    <link id="theme-style" rel="stylesheet" href="assets/css/styles.css">
+    <link id="theme-style" rel="stylesheet" href="assets/css/styles-2.css">
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -407,11 +407,11 @@
     <section id="contact" class="contact section has-pattern">
         <div class="container">
             <div class="row text-center">
-                <h2 class="title">Contact US</h2>
+                <h2 class="title">Contact Us</h2>
                 <div class="intro col-md-6 col-sm-12 col-xs-12 col-md-offset-3">
-                    <p>We’d love to hear from you. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ut erat magna. Aliquam porta sem a lacus imperdiet posuere. Integer semper eget ligula id eleifend.</p>
+                    <p>We’d love to hear from you. What are you interested to learn?</p>
                     <ul class="list-unstyled contact-details">
-                        <li><i class="fa fa-envelope"></i><a href="mailto:hello@website.com">hello@website.com</a></li>
+                        <li><i class="fa fa-envelope"></i><a href="mailto:devin.pastoor@gmail.com">devin.pastoor@gmail.com</a></li>
                         <li><i class="fa fa-phone-square"></i>0800 123 456</li>
                     </ul>
                 </div>
@@ -491,43 +491,7 @@
         </div><!--//modal-dialog-->
     </div><!--//modal-->
 
-    <!-- *****CONFIGURE STYLE (Remove on production site)****** -->
-    <div class="config-wrapper">
-        <div class="config-wrapper-inner">
-            <a id="config-trigger" class="config-trigger" href="#"><i class="fa fa-cog"></i></a>
-            <div id="config-panel" class="config-panel">
-                <h5>Choose Colour</h5>
-                <ul id="color-options" class="list-unstyled list-inline">
-                    <li class="theme-1 active" ><a data-style="assets/css/styles.css" data-logo="assets/images/logo/logo.png" href="#"></a></li>
-                    <li class="theme-2"><a data-style="assets/css/styles-2.css" data-logo="assets/images/logo/logo-2.png" href="#"></a></li>
-                    <li class="theme-3"><a data-style="assets/css/styles-3.css" data-logo="assets/images/logo/logo-3.png" href="#"></a></li>
-                    <li class="theme-4"><a data-style="assets/css/styles-4.css" data-logo="assets/images/logo/logo-4.png" href="#"></a></li>
-
-                    <li class="theme-5"><a data-style="assets/css/styles-5.css" data-logo="assets/images/logo/logo-5.png" href="#"></a></li>
-
-                    <li class="theme-6"><a data-style="assets/css/styles-6.css" data-logo="assets/images/logo/logo-6.png" href="#"></a></li>
-                    <li class="theme-7"><a data-style="assets/css/styles-7.css" data-logo="assets/images/logo/logo-7.png" href="#"></a></li>
-                    <li class="theme-8"><a data-style="assets/css/styles-8.css" data-logo="assets/images/logo/logo-8.png" href="#"></a></li>
-
-                    <li class="theme-9"><a data-style="assets/css/styles-9.css" data-logo="assets/images/logo/logo-9.png" href="#"></a></li>
-                    <li class="theme-10"><a data-style="assets/css/styles-10.css" data-logo="assets/images/logo/logo-10.png" href="#"></a></li>
-
-                </ul><!--//color-options-->
-                <h5 class="device-title">Choose Device</h5>
-                <ul class="list-unstyled">
-                    <li><a href="index.html">iPhone Black</a></li>
-                    <li><a href="iphone-white.html">iPhone White</a></li>
-                    <li><a href="ipad-white.html">iPad White</a></li>
-                    <li><a href="ipad-black.html">iPad Black</a></li>
-                    <li><a href="android.html">Android</a></li>
-                    <li><a href="iphone-landscape.html">iPhone Landscape <span class="label label-success">New</span></a></li>
-                    <li><a href="android-landscape.html">Android Landscape <span class="label label-success">New</span></a></li>
-                </ul>
-                <a id="config-close" class="close" href="#"><i class="fa fa-times-circle"></i></a>
-            </div><!--//configure-panel-->
-        </div><!--//config-wrapper-inner-->
-    </div><!--//config-wrapper-->
-
+  
     <!-- Javascript -->
     <script type="text/javascript" src="assets/plugins/jquery-1.11.2.min.js"></script>
     <script type="text/javascript" src="assets/plugins/jquery-migrate-1.2.1.min.js"></script>
