iframe works but is small

--- a/website/index.html
+++ b/website/index.html
@@ -168,7 +168,8 @@
                     </div><!--//qr-codes-->
                 </div><!--//content-->
                 <div id="video-container" class="video-container col-md-6 col-sm-6 col-xs-12 col-md-pull-6 col-sm-pull-6">
-                  <iframe class="speakerdeck-iframe" frameborder="0" src="//speakerdeck.com/player/137648903bd601324b660ed537686a9d" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" style="border: 0px; background-color: transparent; margin: 0px; padding: 0px; border-top-left-radius: 5px; border-top-right-radius: 5px; border-bottom-right-radius: 5px; border-bottom-left-radius: 5px; width: 710px; height: 608.3671875000009px; background-position: initial initial; background-repeat: initial initial;"></iframe>                </div><!--//video-->
+                  <iframe class="speakerdeck-iframe" frameborder="0" src="https://www.speakerdeck.com/player/137648903bd601324b660ed537686a9d" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+                  </div><!--//video-->
             </div><!--//row-->
         </div><!--//container-->
     </section><!--//how-->
