center for more fluid mobile layout

--- a/website/index.html
+++ b/website/index.html
@@ -167,7 +167,7 @@
                         </div>
                     </div><!--//qr-codes-->
                 </div><!--//content-->
-                <div id="video-container" class="video-container col-md-6 col-sm-6 col-xs-12 col-md-pull-6 col-sm-pull-6">
+                <div id="video-container" class="video-container text-center col-md-6 col-sm-6 col-xs-12 col-md-pull-6 col-sm-pull-6">
                   <iframe class="speakerdeck-iframe" frameborder="0" src="https://www.speakerdeck.com/player/137648903bd601324b660ed537686a9d" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
                   </div><!--//video-->
             </div><!--//row-->
