--- a/website/index.html
+++ b/website/index.html
@@ -51,7 +51,7 @@
                     <ul class="nav navbar-nav">
                         <li class="active nav-item sr-only"><a class="scrollto" href="#promo">Home</a></li>
                         <li class="nav-item"><a class="scrollto" href="#features">Course Material</a></li>
-                        <li class="nav-item"><a class="scrollto" href="#how">Sample</a></li>
+                        <li class="nav-item"><a class="scrollto" href="#how">Samples</a></li>
                         <li class="nav-item"><a class="scrollto" href="#faq">FAQ</a></li>
                         <li class="nav-item"><a class="scrollto" href="#about">About Us</a></li>
                         <li class="nav-item"><a class="scrollto" href="#pricing">Registration</a></li>
@@ -168,7 +168,7 @@
                     </div><!--//qr-codes-->
                 </div><!--//content-->
                 <div id="video-container" class="video-container text-center col-md-6 col-sm-6 col-xs-12 col-md-pull-6 col-sm-pull-6">
-                  <iframe class="speakerdeck-iframe" frameborder="0" src="https://www.speakerdeck.com/player/137648903bd601324b660ed537686a9d" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+                  <iframe class="speakerdeck-iframe" width="500" height="320" frameborder="0" src="https://www.speakerdeck.com/player/137648903bd601324b660ed537686a9d" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
                   </div><!--//video-->
             </div><!--//row-->
         </div><!--//container-->
@@ -254,90 +254,29 @@
                     <div class="quote-box">
                         <i class="fa fa-quote-left"></i>
                         <blockquote class="quote">
-                            <a href="#">@Delta</a> I love this #app. Lorem ipsum dolor sit amet, consectetur adipiscing elit. #Mobile
+                            What used to take twenty lines of code I learned how to do in two - and it runs faster!
                         </blockquote><!--//quote-->
                     </div><!--//quote-box-->
-                    <div class="people row">
-                        <img class="img-rounded user-pic col-md-5 col-sm-5 col-xs-12 col-md-offset-1 col-sm-offset-1" src="assets/images/people/people-1.png" alt="" />
-                        <p class="details text-center pull-left">
-                            <span class="name">Christine Heal</span>
-                            <span class="title">Bristol, UK</span>
-                        </p>
-                    </div><!--//people-->
                 </div><!--//item-->
                 <div class="item col-md-4 col-sm-4">
                     <div class="quote-box">
                         <i class="fa fa-quote-left"></i>
                         <blockquote class="quote">
-                            <a href="#">@Delta</a> consectetur adipiscing elit. #DeltaApp Sed bibendum velit quis nunc laoreet dictum id nisl id lacinia.
+                            The examples were highly relevant to my actual projects. I was able to immediately apply what I've learned to
+                            my day-to-day work.
                         </blockquote><!--//quote-->
                     </div><!--//quote-box-->
-                    <div class="people row">
-                        <img class="img-rounded user-pic col-md-5 col-sm-5 col-xs-12 col-md-offset-1 col-sm-offset-1" src="assets/images/people/people-2.png" alt="" />
-                        <p class="details text-center pull-left">
-                            <span class="name">Ben Rousseau</span>
-                            <span class="title">Paris, France</span>
-                        </p>
-                    </div><!--//people-->
                 </div><!--//item-->
                 <div class="item col-md-4 col-sm-4">
                     <div class="quote-box">
                         <i class="fa fa-quote-left"></i>
                         <blockquote class="quote">
-                        I find DeltaApp very useful - Lorem ipsum dolor sit amet, check it out: <a href="#">http://bit.ly/1gB9UBR</a>
+                            The topics were easily understable and extremely well presented. I feel so much more productive now!
                         </blockquote><!--//quote-->
                     </div><!--//quote-box-->
-                    <div class="people row">
-                        <img class="img-rounded user-pic col-md-5 col-sm-5 col-xs-12 col-md-offset-1 col-sm-offset-1" src="assets/images/people/people-3.png" alt="" />
-                        <p class="details text-center pull-left">
-                            <span class="name">Mike Chan</span>
-                            <span class="title">Hongkong, China</span>
-                        </p>
-                    </div><!--//people-->
                 </div><!--//item-->
             </div><!--//row-->
-            <div class="row">
-                <div class="item col-md-4 col-sm-4 col-md-offset-2 col-sm-offset-2">
-                    <div class="quote-box">
-                        <i class="fa fa-quote-left"></i>
-                        <blockquote class="quote">
-                         DeltaApp is fab lorem ipsum dolor sit amet proin sagittis sodales pulvinar Mauris id arcu eget augue condimentum euismod: <a href="#">http://bit.ly/1gB9UBR</a>
-                        </blockquote><!--//quote-->
-                    </div><!--//quote-box-->
-                    <div class="people row">
-                        <img class="img-rounded user-pic col-md-5 col-sm-5 col-xs-12 col-md-offset-1 col-sm-offset-1" src="assets/images/people/people-4.png" alt="" />
-                        <p class="details text-center pull-left">
-                            <span class="name">Annie Lee</span>
-                            <span class="title">Berlin, Germany</span>
-                        </p>
-                    </div><!--//people-->
-                </div><!--//item-->
-                <div class="item col-md-4 col-sm-4">
-                    <div class="quote-box">
-                        <i class="fa fa-quote-left"></i>
-                        <blockquote class="quote">
-                        DeltaApp is a great dolor sit amet proin sagittis sodales pulvinar vestibulum porta dolor molestie semper.: <a href="#">http://bit.ly/1gB9UBR</a>
-                        </blockquote><!--//quote-->
-                    </div><!--//quote-box-->
-                    <div class="people row">
-                        <img class="img-rounded user-pic col-md-5 col-sm-5 col-xs-12 col-md-offset-1 col-sm-offset-1" src="assets/images/people/people-5.png" alt="" />
-                        <p class="details text-center pull-left">
-                            <span class="name">Adam Gordon</span>
-                            <span class="title">London, UK</span>
-                        </p>
-                    </div><!--//people-->
-                </div><!--//item-->
             </div>
-            <div class="press row text-center">
-                <h3 class="note">Also featured in...</h3>
-                <ul class="col-md-12 list-inline">
-                    <li><a href="#"><img class="img-responsive" src="assets/images/press/press-1.png" alt="" /></a></li>
-                    <li><a href="#"><img class="img-responsive" src="assets/images/press/press-2.png" alt="" /></a></li>
-                    <li><a href="#"><img class="img-responsive" src="assets/images/press/press-3.png" alt="" /></a></li>
-                    <li><a href="#"><img class="img-responsive" src="assets/images/press/press-4.png" alt="" /></a></li>
-                    <li class="last"><a href="#"><img class="img-responsive" src="assets/images/press/press-5.png" alt="" /></a></li>
-                </ul>
-            </div><!--//row-->
         </div><!--//container-->
     </section><!--//Testimonials-->
 
