update top things learned

--- a/website/index.html
+++ b/website/index.html
@@ -70,9 +70,10 @@
                   <h2 class="title">Learn Modern R</h2>
                     <ul class="summary">
                         <li>Reduce time spent writing code</li>
-                        <li>dplyr, tidyr, ggplot and Rmarkdown</li>
+                        <li>Supercharge your workflow with packages such as dplyr, tidyr, ggplot2, PKPDmisc and vpc</li>
                         <li>Learn best practices in project design and management</li>
-                        <li>Apply the concepts with real-world examples!</li>
+                        <li>Create automated and reproducible reports with Rmarkdown</li>
+                        <li>Apply the concepts and techniques learned to real-world examples!</li>
                     </ul>
 
                 </div><!--//overview-->
