make example material icons books

--- a/website/index.html
+++ b/website/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="gavicon.ico">
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Covered+By+Your+Grace' rel='stylesheet' type='text/css'>
     <!-- Global CSS -->
@@ -158,11 +158,11 @@
                         </div><!--//note-->
                         <div class="row">
                             <div class="item col-md-6 col-sm-6">
-                                <img src="assets/images/qrcodes/qr-1.png" alt="" />
+                              <i class="fa fa-book fa-4x"></i>
                                 <p>Sample handout</p>
                             </div><!--//item-->
                             <div class="item col-md-6 col-sm-6">
-                                <img src="assets/images/qrcodes/qr-1.png" alt="" />
+                              <i class="fa fa-book fa-4x"></i>
                                 <p>Sample hands-on assignment</p>
                             </div><!--//item-->
                         </div>
@@ -170,7 +170,7 @@
                 </div><!--//content-->
                 <div id="video-container" class="video-container text-center col-md-6 col-sm-6 col-xs-12 col-md-pull-6 col-sm-pull-6">
                   <iframe class="speakerdeck-iframe" width="500" height="320" frameborder="0" src="https://www.speakerdeck.com/player/137648903bd601324b660ed537686a9d" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-                  </div><!--//video-->
+                </div><!--//video-->
             </div><!--//row-->
         </div><!--//container-->
     </section><!--//how-->
