add highlights information

--- a/website/index.html
+++ b/website/index.html
@@ -78,8 +78,6 @@
 
                 </div><!--//overview-->
 
-
-            </div><!--//row-->
         </div><!--//container-->
     </section><!--//promo-->
 
@@ -94,7 +92,7 @@
                     </div><!--//icon-->
                     <div class="content">
                         <h3 class="title">Targeted Course Material</h3>
-                        <p>Outline an app feature/benefit here. You can change the icon above to any of the 500+ <a href="http://fortawesome.github.io/Font-Awesome/icons/" target="_blank">FontAwesome icons</a> available. </p>
+                        <p>Specifically designed to address pharmacometric projects  </p>
                         <button class="modal-trigger btn btn-link" data-toggle="modal" data-target="#feature-modal-1">Find out more</button>
                     </div><!--//content-->
                 </div><!--//item-->
@@ -104,7 +102,7 @@
                     </div><!--//icon-->
                     <div class="content">
                         <h3 class="title">Hands-on examples</h3>
-                        <p>Outline an app feature/benefit. You can change the icon above to any of the 500+ <a href="http://fortawesome.github.io/Font-Awesome/icons/" target="_blank">FontAwesome icons</a> available. </p>
+                        <p>Helps reinforce the course material with numerous examples  </p>
                         <button class="modal-trigger btn btn-link" data-toggle="modal" data-target="#feature-modal-1">Find out more</button>
                     </div><!--//content-->
                 </div><!--//item-->
@@ -114,7 +112,7 @@
                     </div><!--//icon-->
                     <div class="content">
                         <h3 class="title">Solve Real-world problems</h3>
-                        <p>Outline an app feature/benefit here. You can change the icon above to any of the 500+ <a href="http://fortawesome.github.io/Font-Awesome/icons/" target="_blank">FontAwesome icons</a> available. </p>
+                        <p>Larger scale hands-on projects emulate real world problems and provide templates for future projects  </p>
                         <button class="modal-trigger btn btn-link" data-toggle="modal" data-target="#feature-modal-1">Find out more</button>
                     </div><!--//content-->
                 </div><!--//item-->
