--- a/website/index.html
+++ b/website/index.html
@@ -289,8 +289,8 @@
                                 <ul class="list-unstyled feature-list">
                                     <li><i class="fa fa-check"></i>All Course Material</li>
                                     <li><i class="fa fa-check"></i>Supplementary R-Foundations material</li>
-                                    <li><i class="fa fa-check"></i>$200 credit towards any future R-course or webinar</li>
-                                    <li><i class="fa fa-check"></i>3 hours skype/webex/etc for R project discussion </li>
+                                    <li><i class="fa fa-check"></i>$100 credit towards any future R-course or webinar</li>
+                                    <li><i class="fa fa-check"></i>3 hours skype/webex/etc for R-project discussions </li>
 
                                 </ul>
                                 <a class="btn btn-theme btn-block" href="#">Sign Up</a>
@@ -348,7 +348,7 @@
     <!-- ******FOOTER****** -->
     <footer class="footer">
         <div class="container">
-            <small class="copyright pull-left">Copyright &copy; 2015 Devin Pastoor</small>
+            <small class="copyright pull-left"> 2015 Devin Pastoor</small>
         </div>
     </footer><!--//footer-->
 
