add more information

--- a/website/index.html
+++ b/website/index.html
@@ -160,28 +160,29 @@
                 <div class="faq-col col-md-6 col-sm-6 col-xs-12">
                     <div class="item">
                         <h3 class="question"><i class="fa fa-question-circle"></i>How much prior R experience should I have?</h3>
-                        <p class="answer">Proin scelerisque magna ac eros aliquam aliquam id in lacus. Morbi quam tortor, consequat at orci non, vulputate volutpat libero. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean sagittis laoreet urna eu ornare. Aenean tempor, leo vel eleifend porttitor, nibh libero ultricies est, sit amet ultricies magna enim et turpis. Donec aliquam velit eu sollicitudin cursus.</p>
+                        <p class="answer">Attendees should have completed at least one project using R. At a minimum, they should be able to read in data, and perform basic data manipulations (eg summarize data, subset out a sub-group).</p>
                     </div><!--//item-->
                     <div class="item">
-                        <h3 class="question"><i class="fa fa-question-circle"></i>What's the differences between ipsum and dolor sit amet?</h3>
-                        <p class="answer">Proin scelerisque magna ac eros aliquam aliquam id in lacus. Morbi quam tortor, consequat at orci non, vulputate volutpat libero. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean sagittis laoreet urna eu ornare. Aenean tempor, leo vel eleifend porttitor. Aenean tempor, leo vel eleifend porttitor, nibh libero ultricies est.</p>
+                        <h3 class="question"><i class="fa fa-question-circle"></i>What comes with the workshop?</h3>
+                        <p class="answer">All attendees will be provided with in-depth slides, codes, practice problems, and solutions to hands on material. Two weeks prior to the workshop, all attendees will be provided with a 'starter pack' of pre-request material to make sure to have a suitable baseline</p>
                     </div><!--//item-->
                 </div><!--//faq-col-->
                 <div class="faq-col col-md-6 col-sm-6 col-xs-12">
                     <div class="item">
-                        <h3 class="question"><i class="fa fa-question-circle"></i>How does the morbi quam tortor work?</h3>
-                        <p class="answer">Proin scelerisque magna ac eros aliquam aliquam id in lacus. Morbi quam tortor, consequat at orci non, vulputate volutpat libero. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean sagittis laoreet urna eu ornare.Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean sagittis laoreet urna eu ornare. Aenean tempor, leo vel eleifend porttitor, nibh libero ultricies est, sit amet ultricies magna enim et turpis. Donec aliquam velit eu sollicitudin cursus.</p>
+                        <h3 class="question"><i class="fa fa-question-circle"></i>What is the workshop teaching style?</h3>
+                        <p class="answer">We have found that a combination of short modular examples to introduce topics and larger scale hands-on examples best balance quick comprehension as well as
+                        how to apply concepts to more advanced situations</p>
                     </div><!--//item-->
 
                     <div class="item">
                         <h3 class="question"><i class="fa fa-question-circle"></i>What can I do to prepare?</h3>
-                        <p class="answer">Aenean tempor, leo vel eleifend porttitor, nibh libero ultricies est, sit amet ultricies magna enim et turpis. Donec aliquam velit eu sollicitudin cursus.Proin scelerisque magna ac eros aliquam aliquam id in lacus. Morbi quam tortor, consequat at orci non, vulputate volutpat libero. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean sagittis laoreet urna eu ornare. </p>
+                        <p class="answer">1 month before the workshop, a list of basic resources will be provided to refresh attendee's foundation. Additional optional resources will be provided to help attendees help identify areas they may wish to as questions or discuss in more depth.</p>
                     </div><!--//item-->
                 </div><!--//faq-col-->
             </div><!--//row-->
             <div class="more text-center">
                 <h4 class="title">More questions?</h4>
-                <a class="btn btn-lg btn-theme scrollto" href="#contact">Get in touch<i class="fa fa-arrow-circle-o-down"></i></a>
+                <a class="btn btn-lg btn-theme scrollto" href="#contact">Get in touch!<i class="fa fa-arrow-circle-o-down"></i></a>
             </div>
         </div><!--//container-->
     </section><!--//faq-->
@@ -240,7 +241,7 @@
                     <div class="quote-box">
                         <i class="fa fa-quote-left"></i>
                         <blockquote class="quote">
-                            The examples were highly relevant to my actual projects. I was able to immediately apply what I've learned to
+                            The examples were highly relevant and I was able to immediately apply what I've learned to
                             my day-to-day work.
                         </blockquote><!--//quote-->
                     </div><!--//quote-box-->
