--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <body data-spy="scroll">
     <!-- ******HEADER****** -->
-    <header id="top" class="header navbar-fixed-top">
+    <header id="top" class="header navbar-fluid-top">
         <div class="container">
             <h1 class="logo pull-left">
                 <a class="scrollto" href="#promo">
@@ -77,7 +77,7 @@
                     </ul>
 
                 </div><!--//overview-->
-              </div>    
+              </div>
         </div><!--//container-->
     </section><!--//promo-->
 
@@ -93,7 +93,7 @@
                     <div class="content">
                         <h3 class="title">Targeted Course Material</h3>
                         <p>Specifically designed to address pharmacometric projects  </p>
-                        <button class="modal-trigger btn btn-link" data-toggle="modal" data-target="#feature-modal-1">Find out more</button>
+                        <button class="modal-trigger btn btn-link"><a href="ggplot_part1.html">Find out more</a></button>
                     </div><!--//content-->
                 </div><!--//item-->
                 <div class="item col-md-4 col-sm-6 col-xs-12 text-center">
@@ -103,7 +103,7 @@
                     <div class="content">
                         <h3 class="title">Hands-on examples</h3>
                         <p>Helps reinforce the course material with numerous examples  </p>
-                        <button class="modal-trigger btn btn-link" data-toggle="modal" data-target="#feature-modal-1">Find out more</button>
+                        <button class="modal-trigger btn btn-link"><a href="ggplot_part1.html">Find out more</a></button>
                     </div><!--//content-->
                 </div><!--//item-->
                 <div class="item col-md-4 col-sm-6 col-xs-12 text-center">
@@ -113,7 +113,7 @@
                     <div class="content">
                         <h3 class="title">Solve Real-world problems</h3>
                         <p>Larger scale hands-on projects emulate real world problems and provide templates for future projects  </p>
-                        <button class="modal-trigger btn btn-link" data-toggle="modal" data-target="#feature-modal-1">Find out more</button>
+                        <button class="modal-trigger btn btn-link"><a href="ggplot_part1.html">Find out more</a></button>
                     </div><!--//content-->
                 </div><!--//item-->
             </div><!--//row-->
@@ -133,19 +133,21 @@
                             <span class="right-arrow"></span>
                         </div><!--//note-->
                         <div class="row">
+                          <a href="https://speakerdeck.com/dpastoor/becoming-a-data-ninja-with-dplyr">
                             <div class="item col-md-6 col-sm-6">
                               <i class="fa fa-book fa-4x"></i>
-                                <p>Sample handout</p>
+                        <p>Sample Handout</p></a>
                             </div><!--//item-->
-                            <div class="item col-md-6 col-sm-6">
-                              <i class="fa fa-book fa-4x"></i>
-                                <p>Sample hands-on assignment</p>
+                            <a href="ggplot_part1.html">
+                              <div class="item col-md-6 col-sm-6">
+                                <i class="fa fa-book fa-4x"></i>
+                          <p>Sample Handout</p></a>
                             </div><!--//item-->
                         </div>
                     </div><!--//qr-codes-->
                 </div><!--//content-->
                 <div id="video-container" class="video-container text-center col-md-6 col-sm-6 col-xs-12 col-md-pull-6 col-sm-pull-6">
-                  <iframe class="speakerdeck-iframe" width="500" height="320" frameborder="0" src="https://www.speakerdeck.com/player/137648903bd601324b660ed537686a9d" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+                  <iframe class="speakerdeck-iframe" height="250" frameborder="0" src="https://www.speakerdeck.com/player/137648903bd601324b660ed537686a9d" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
                 </div><!--//video-->
             </div><!--//row-->
         </div><!--//container-->
