--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="container">
             <h1 class="logo pull-left">
                 <a class="scrollto" href="#promo">
-                    <img id="logo-image" class="logo-image" src="assets/images/logo/logo.png" alt="Logo">
+                    <img id="logo-image" class="logo-image" src="assets/images/logo/logo-2.png" alt="Logo">
                     <span class="logo-title">Learn R</span>
                 </a>
             </h1><!--//logo-->
