--- a/index.html
+++ b/index.html
@@ -267,15 +267,15 @@
                     <div class="item price-1 col-md-4 col-sm-4 col-xs-12 text-center">
                         <div class="item-inner">
                             <div class="heading">
-                            <h3 class="title">Academic/Regulatory</h3>
-                                <p class="price-figure"><span class="price-figure-inner"><span class="currency">$</span><span class="number">749</span><br /><span class="unit">per person</span></p>
+                            <h3 class="title">Workshop</h3>
+                                <p class="price-figure"><span class="price-figure-inner"><span class="number">1</span><br /><span class="unit">ticket</span></p>
                             </div>
                             <div class="content">
                                 <ul class="list-unstyled feature-list">
                                     <li><i class="fa fa-check"></i>All course code</li>
                                     <li><i class="fa fa-check"></i>Supplementary R-Foundations material</li>
                                 </ul>
-                                <a class="btn btn-theme btn-block" href="#">Sign Up</a>
+                                <a class="btn btn-theme btn-block" href="https://www.eventbrite.com/e/modern-r-for-pharmacometrics-tickets-16193997683">Sign Up</a>
 
                             </div><!--//content-->
                         </div><!--//item-inner-->
@@ -284,8 +284,8 @@
                     <div class="item price-2 col-md-4 col-sm-4 col-xs-12 text-center best-buy">
                         <div class="item-inner">
                             <div class="heading">
-                            <h3 class="title">Academic/Regulatory PLUS</h3>
-                                <p class="price-figure"><span class="price-figure-inner"><span class="currency">$</span><span class="number">999</span><br /><span class="unit">per person</span></span></p>
+                            <h3 class="title">Workshop PLUS</h3>
+                                <p class="price-figure"><span class="price-figure-inner"><span class="number">1</span><br /><span class="unit">ticket</span></p>
                             </div>
                             <div class="content">
                                 <ul class="list-unstyled feature-list">
@@ -295,7 +295,7 @@
                                     <li><i class="fa fa-check"></i>3 hours skype/webex/etc for R-project discussions </li>
 
                                 </ul>
-                                <a class="btn btn-theme btn-block" href="#">Sign Up</a>
+                                <a class="btn btn-theme btn-block" href="https://www.eventbrite.com/e/modern-r-for-pharmacometrics-tickets-16193997683">Sign Up</a>
                             </div><!--//content-->
                             <div class="ribbon">
                                 <div class="text">Popular</div>
@@ -310,10 +310,11 @@
                             </div>
                             <div class="content">
                                 <ul class="list-unstyled feature-list">
-                                  <li><i class="fa fa-check"></i>Everything from chosen package</li>
+                                  <li><i class="fa fa-check"></i>Everything from either chosen package</li>
                                   <li><i class="fa fa-check"></i>Great discount</li>
+                                  <li><i class="fa "></i>Contact Devin for Discount Code</li>
                                 </ul>
-                                <a class="btn btn-theme btn-block" href="#">Sign Up</a>
+                                <a class="btn btn-theme btn-block" href="https://www.eventbrite.com/e/modern-r-for-pharmacometrics-tickets-16193997683">Sign Up</a>
 
                             </div><!--//content-->
                         </div><!--//item-inner-->
