fix name for hands-on

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                             <a href="examples/ggplot_part1.html">
                               <div class="item col-md-6 col-sm-6">
                                 <i class="fa fa-book fa-4x"></i>
-                          <p>Sample Handout</p></a>
+                          <p>Sample Hands-on Material</p></a>
                             </div><!--//item-->
                         </div>
                     </div><!--//qr-codes-->
