--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
             <div class="text-center">
                  <ul class="social-icons list-inline">
                     <li><a href="#" ><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="https://www.linkedin.com/pub/devin-pastoor/" ><i class="fa fa-linkedin"></i></a></li>
+                    <li><a href="https://www.linkedin.com/pub/devin-pastoor/22/b25/a29" ><i class="fa fa-linkedin"></i></a></li>
                     <li><a href="https://www.github.com/dpastoor" ><i class="fa fa-github"></i></a></li>
                 </ul><!--//social-icons-->
             </div><!--//row-->
