make links work on firefox as well

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <div class="content">
                         <h3 class="title">Targeted Course Material</h3>
                         <p>Specifically designed to address pharmacometric projects  </p>
-                        <button class="modal-trigger btn btn-link"><a href="examples/ggplot_part1.html">Find out more</a></button>
+                        <a href="https://www.eventbrite.com/e/modern-r-for-pharmacometrics-tickets-16193997683"><button class="modal-trigger btn btn-link">Find out more</button></a>
                     </div><!--//content-->
                 </div><!--//item-->
                 <div class="item col-md-4 col-sm-6 col-xs-12 text-center">
@@ -103,7 +103,7 @@
                     <div class="content">
                         <h3 class="title">Hands-on examples</h3>
                         <p>Helps reinforce the course material with numerous examples  </p>
-                        <button class="modal-trigger btn btn-link"><a href="examples/ggplot_part1.html">Find out more</a></button>
+                        <a href="examples/ggplot_part1.html"><button class="modal-trigger btn btn-link">Find out more</button></a>
                     </div><!--//content-->
                 </div><!--//item-->
                 <div class="item col-md-4 col-sm-6 col-xs-12 text-center">
@@ -113,7 +113,7 @@
                     <div class="content">
                         <h3 class="title">Solve Real-world problems</h3>
                         <p>Larger scale hands-on projects emulate real world problems and provide templates for future projects  </p>
-                        <button class="modal-trigger btn btn-link"><a href="examples/ggplot_part1.html">Find out more</a></button>
+                        <a href="examples/ggplot_part1.html"><button class="modal-trigger btn btn-link">Find out more</button></a>
                     </div><!--//content-->
                 </div><!--//item-->
             </div><!--//row-->
