--- a/index.html
+++ b/index.html
@@ -196,6 +196,10 @@
                     <h2 class="title">Meet the team!</h2>
                     <p>Dr. Vijay Ivaturi and Devin Pastoor are members of the Center for Translational Medicine at the University of Maryland School of Pharmacy</p>
                     <p>Dr. Ivaturi's research focuses on the development of methods and tools for quantitative clinical pharmacology. He obtained his doctorate in experimental and clinical pharmacology from the University of Minnesota, which he followed with a post-doctoral fellowship in pharmacometrics at Uppsala University in Sweden before joining the CTM</p>
+                    <p>
+                      Devin has worked for the past 3 years interfacing insights gained from translational models with tools to speed up the modeling and data analysis process. He has authored over 5 R packages
+                      and continues to develop new tools to facilitate model-based drug development. 
+                    </p>
                 </div><!--//content-->
                 <div class="team col-md-5 col-sm-5 col-md-offset-1 col-sm-offset-1 col-xs-12">
                     <div class="row">
@@ -354,41 +358,6 @@
             <small class="copyright pull-left"> 2015 Devin Pastoor</small>
         </div>
     </footer><!--//footer-->
-
-    <!-- Feature Modal -->
-    <div class="modal modal-feature" id="feature-modal-1" tabindex="-1" role="dialog" aria-labelledby="featureModalLabel-1" aria-hidden="true">
-        <div class="modal-dialog modal-lg">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <h4 id="featureModalLabel-1" class="modal-title text-center">App Feature and Benefit</h4>
-                </div>
-                <div class="modal-body">
-                    <div class="row">
-                        <figure class="figure col-md-6 col-sm-12 col-xs-12">
-                            <img class="img-responsive img-rounded" src="assets/images/features/feature-figure-1.png" alt="" />
-                            <figcaption class="caption">Figure caption goes here </figcaption>
-                        </figure>
-                        <div class="content col-md-6 col-sm-12 col-xs-12">
-                            <p>You can use the modal to explain one of your app's features/benefits in details. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. </p>
-                            <p>In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. </p>
-                            <ul class="list-unstyled">
-                                <li><i class="fa fa-star"></i>Lorem ipsum dolor sit ame</li>
-                                <li><i class="fa fa-star"></i>Curabitur elit elit</li>
-                                <li><i class="fa fa-star"></i>Nunc tincidunt ipsum a risus</li>
-                            </ul>
-                            <p>Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.</p>
-                            <blockquote class="quote">
-                                <p><i class="fa fa-quote-left"></i>I love this magna pellentesque in magnis gravida sit augue felis vehicula vestibulum semper penatibus justo ornare semper Gravida felis platea arcu mus non. Montes at posuere. Natoque.</p>
-                                <p class="people"><span class="name">Adam Lee</span><br><span class="title">Developer, AppHunt</span></p>
-                            </blockquote>
-                        </div><!--//content-->
-                    </div><!--//row-->
-                </div><!--//modal-body-->
-            </div><!--//modal-content-->
-        </div><!--//modal-dialog-->
-    </div><!--//modal-->
-
 
     <!-- Javascript -->
     <script type="text/javascript" src="assets/plugins/jquery-1.11.2.min.js"></script>
