updates for acop

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <div class="content">
                         <h3 class="title">Targeted Course Material</h3>
                         <p>Specifically designed to address pharmacometric projects  </p>
-                        <a href="https://www.eventbrite.com/e/modern-r-for-pharmacometrics-tickets-16193997683"><button class="modal-trigger btn btn-link">Find out more</button></a>
+                        <a href="https://dl.dropboxusercontent.com/u/1133510/modernRschedule.pdf"><button class="modal-trigger btn btn-link">Find out more</button></a>
                     </div><!--//content-->
                 </div><!--//item-->
                 <div class="item col-md-4 col-sm-6 col-xs-12 text-center">
@@ -279,33 +279,12 @@
                                     <li><i class="fa fa-check"></i>All course code</li>
                                     <li><i class="fa fa-check"></i>Supplementary R-Foundations material</li>
                                 </ul>
-                                <a class="btn btn-theme btn-block" href="https://www.eventbrite.com/e/modern-r-for-pharmacometrics-tickets-16193997683">Sign Up</a>
+                                <a class="btn btn-theme btn-block" href="http://www.acop6.org/registration">Register for ACoP</a>
 
                             </div><!--//content-->
                         </div><!--//item-inner-->
                     </div><!--//item-->
 
-                    <div class="item price-2 col-md-4 col-sm-4 col-xs-12 text-center best-buy">
-                        <div class="item-inner">
-                            <div class="heading">
-                            <h3 class="title">Workshop PLUS</h3>
-                                <p class="price-figure"><span class="price-figure-inner"><span class="number">1</span><br /><span class="unit">ticket</span></p>
-                            </div>
-                            <div class="content">
-                                <ul class="list-unstyled feature-list">
-                                    <li><i class="fa fa-check"></i>All Course Material</li>
-                                    <li><i class="fa fa-check"></i>Supplementary R-Foundations material</li>
-                                    <li><i class="fa fa-check"></i>$100 credit towards any future R-course or webinar</li>
-                                    <li><i class="fa fa-check"></i>3 hours skype/webex/etc for R-project discussions </li>
-
-                                </ul>
-                                <a class="btn btn-theme btn-block" href="https://www.eventbrite.com/e/modern-r-for-pharmacometrics-tickets-16193997683">Sign Up</a>
-                            </div><!--//content-->
-                            <div class="ribbon">
-                                <div class="text">Popular</div>
-                            </div><!--//ribbon-->
-                        </div><!--//item-inner-->
-                    </div><!--//item-->
                     <div class="item price-1 col-md-4 col-sm-4 col-xs-12 text-center">
                         <div class="item-inner">
                             <div class="heading">
@@ -318,7 +297,7 @@
                                   <li><i class="fa fa-check"></i>Great discount</li>
                                   <li><i class="fa "></i>Contact Devin for Discount Code</li>
                                 </ul>
-                                <a class="btn btn-theme btn-block" href="https://www.eventbrite.com/e/modern-r-for-pharmacometrics-tickets-16193997683">Sign Up</a>
+                                <a class="btn btn-theme btn-block" href="http://www.acop6.org/registration">Register for ACoP</a>
 
                             </div><!--//content-->
                         </div><!--//item-inner-->
@@ -380,10 +359,8 @@
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
   ga('create', 'UA-49237071-2', 'auto');
   ga('send', 'pageview');
-
 </script>
 </body>
 </html>
